--- a/compreview/deployment.yaml
+++ b/compreview/deployment.yaml
@@ -22,4 +22,4 @@ spec:
       containers:
       - name: hello-app
         image: central-quay-registry.apps.ocp4.example.com/cloudadmin/hello-app:v10
-      imagePullSecret: cloudadmin-pullrobot-pull-secret
+      imagePullSecrets: cloudadmin-pullrobot-pull-secret
