--- a/compreview/deployment.yaml
+++ b/compreview/deployment.yaml
@@ -22,5 +22,6 @@ spec:
       containers:
       - name: hello-app
         image: central-quay-registry.apps.ocp4.example.com/cloudadmin/hello-app:latest
-      imagePullSecrets: cloudadmin-pullrobot-pull-secret
+      imagePullSecrets: 
+      - name: cloudadmin-pullrobot-pull-secret
 ---
