--- a/compreview/deployment.yaml
+++ b/compreview/deployment.yaml
@@ -2,25 +2,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-app2
+  name: hello-app
   labels:
-    app: hello-app2
-    name: hello-app2
+    app: hello-app
+    name: hello-app
   namespace: compreview-install
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello-app2
-      name: hello-app2
+      app: hello-app
+      name: hello-app
   template:
     metadata:
       labels:
-        app: hello-app2
-        name: hello-app2
+        app: hello-app
+        name: hello-app
     spec:
       containers:
-      - name: hello-app2
+      - name: hello-app
         image: central-quay-registry.apps.ocp4.example.com/cloudadmin/hello-app:v11
       imagePullSecrets: 
       - name: cloudadmin-pullrobot-pull-secret
